--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  ffi: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +21,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   ffigen: any
 
 # For information on the generic Dart part of this file, see the
@@ -47,7 +48,10 @@ ffigen:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  # assets:
+  assets:
+      - native/linux/libdropbox.so
+      - native/android/libdropbox.so
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
